# trading-bot

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
binance_futures_testnet_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
bot/: client.py  logging_config.py  models.py  orders.py
tests/: test_client.py  test_orders.py
